Fix Railway deployment: Make database config flexible, add better error handling, and make components optional

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,6 @@ python-binance==1.0.19
 pandas==2.2.0
 numpy==1.26.3
 requests==2.31.0
-aiohttp==3.9.3 
+aiohttp==3.9.3
+PyYAML==6.0.1
+psycopg2-binary==2.9.9 
